# PainWatchStandard

./: .firebaserc  .gitattributes  .gitignore  .gitmodules  DASHBOARD_README.md  LICENSE  NORMALIZATION_STATUS.md  PAIN_DATASET_EXPANSION_RECOMMENDATIONS.md  PAIN_DATASET_GATEWAY_SPEC.md  PAIN_FEEDER_SPEC.md  PAIN_THERMOMETER_DATA_REPORT.md  README.md  SELF_SUPERVISED_EXPLORATION_SUMMARY.md  ZERVE_DASHBOARD_README.md  firebase.json  pain_all_dataset_feeder.py  pain_feeder.py  pain_gateway_server.py  pain_normalizer.py  pain_self_supervised.py  pain_supervised_baseline.py  postgres_demo_export.py  pyproject.toml  test_pain_feeder.py
PainThermometer/: project.yml
_exports/: pain_demo_postgres_phase3_all_datasets.sql.gz.manifest.json  pain_demo_postgres_phase3_small_sample.sql.gz.manifest.json
config/: datasets.yaml  functional_pain_v2.yaml
docs/: APPLE_HEALTH_ARCHETYPE_READINGS.md  ARCHITECTURE.md  INGEST_PIPELINE.md  LABELED_DATASET_INSTANCE_ANALYSIS.md  STATE_NORMALIZATION_AND_R_FINDINGS.md
functions/: index.js  package-lock.json  package.json
inference_flow/: convert_to_coreml.py  inference.py  requirements-coreml.txt  smoke_test.py  train_dropout_ensemble.py  train_final_model.py
pain-thermometer-exploration/: .gitignore  README.md
promptopinion-dashboard-mock/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: analyze_labeled_datasets.py  apple_health_archetypes.py  build_windows.py  evaluate_wesad_pns_protocol.py  explore_temporal_shape.py  export_phase3_for_r.py  ingest_datasets.py  (+5 more)
(+256 files in other folders)
